--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,10 @@
     <meta charset="UTF-8">
     <title>Index | Den of devils</title>
     <link rel="stylesheet" href="/css/style.css">
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <header>
+    <header id="top">
     <a href="/"><img src="/images/logo.gif" alt="yourdevilfriends.art" title="Return home?"></a>
 </header>
     <main>
@@ -21,7 +21,6 @@
         <li style="list-style-image: url(/images/sozai/frog.gif);"><a href="/blog">Blog</a></li>
         <li style="list-style-image: url(/images/sozai/bug.gif);"><a href="/gallery">Gallery</a></li>
         <li style="list-style-image: url(/images/sozai/squib.gif);"><a href="/freebies">Freebies</a></li>
-        <li style="list-style-image: url(/images/sozai/what.gif);"><a href="/curiosities">Curiosities</a></li>
         <li style="list-style-image: url(/images/sozai/tv.gif);"><a href="/linkroll">Linkroll</a></li>
     </ul>
 </nav>
@@ -45,7 +44,7 @@
     <footer>
     <p>yourdevilfriends.art © Bruno «devils» A.<br>
     2023-whenever</p>
-    <img src="/images/wiz.gif" alt="Decorative image">
+    <a href="#top"><img src="/images/wiz.gif" alt="Back to top"></a>
 </footer>
 </body>
 </html>
