--- a/public/featured_image/https/images2.imgbox.com/52/27/dinkjaha_o.png/index.html
+++ b/public/featured_image/https/images2.imgbox.com/52/27/dinkjaha_o.png/index.html
@@ -36,7 +36,7 @@
         
         <h3><a href="https://yourdevilfriends.art/gallery/posts/april1st/">April 1st</a></h3>
         <h4><time>Apr 1, 2023</time></h4>
-        <p>A doodle for April 1st.</p>
+        <p></p>
         <h4><a style="margin: auto 5px;" href="https://yourdevilfriends.art/tags/2023/">#2023</a><a style="margin: auto 5px;" href="https://yourdevilfriends.art/tags/digital-art/">#digital art</a><a style="margin: auto 5px;" href="https://yourdevilfriends.art/tags/hazbin-hotel/">#Hazbin Hotel</a></h4>
     </article>
     
@@ -46,9 +46,10 @@
         </section>
     </main>
     <footer>
-    <p>yourdevilfriends.art © Bruno «devils» A.<br>
+    <p>yourdevilfriends.art © <a href="mailto:heckmaster@protonmail.com">Bruno «devils» A.</a><br>
     2023-whenever</p>
-    <a href="#top"><img src="/images/wiz.gif" alt="Back to top"></a>
+    <p><a rel="me" href="https://blorbo.social/@yourdevilfriends">Mastodon</a> · <a href="https://yourdevilfriends.tumblr.com/">Tumblr</a></p>
+    <a href="#top"><img src="/images/wiz.gif" alt="Wizard" title="Back to top"></a>
 </footer>
 </body>
 </html>
