--- a/public/index.html
+++ b/public/index.html
@@ -36,15 +36,17 @@
 <p>How very  delightful to meet you!</p>
 <p>In this site you will find my art and ramblings, along with anything else I&rsquo;d like to add. They <em>might</em> even have some degree of quality, though that&rsquo;s entirely up for you to decide.</p>
 <p>So, stay a while and poke around. Who knows? Maybe you&rsquo;ll find something you really like.</p>
+<p>PS: If you get lost, I heard a wizard can help out.</p>
 
     </article>
 
         </section>
     </main>
     <footer>
-    <p>yourdevilfriends.art © Bruno «devils» A.<br>
+    <p>yourdevilfriends.art © <a href="mailto:heckmaster@protonmail.com">Bruno «devils» A.</a><br>
     2023-whenever</p>
-    <a href="#top"><img src="/images/wiz.gif" alt="Back to top"></a>
+    <p><a rel="me" href="https://blorbo.social/@yourdevilfriends">Mastodon</a> · <a href="https://yourdevilfriends.tumblr.com/">Tumblr</a></p>
+    <a href="#top"><img src="/images/wiz.gif" alt="Wizard" title="Back to top"></a>
 </footer>
 </body>
 </html>
