--- a/accessibility.html
+++ b/accessibility.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/posts.css">
-    <title>The year was 2007...</title>
+    <title>Pointers for Web accessibility</title>
 </head>
 <body>
     <main>
