About page, minor changes

--- a/accessibility.html
+++ b/accessibility.html
@@ -29,9 +29,9 @@
         <p>Screen readers are a form of assistive technology that reads text and image content set in a website out loud. They are essential for blind users and important for people with reading issues, such as those with dyslexia. They are useful for those who are visually impaired or have difficulty reading for whatever reason.</p>
         <p>Common desktop screen readers include:</p>
         <ul>
-            <li><a href="http://" target="_blank">NVDA</a> for Windows</li>
-            <li><a href="http://" target="_blank">Orca</a> for Linux</li>
-            <li><a href="http://" target="_blank">VoiceOver</a> for macOS</li>
+            <li><a href="https://www.nvaccess.org/download/" target="_blank">NVDA</a> for Windows</li>
+            <li><a href="https://help.gnome.org/users/orca/stable/" target="_blank">Orca</a> for Linux</li>
+            <li><a href="https://support.apple.com/guide/voiceover/welcome/mac" target="_blank">VoiceOver</a> for macOS</li>
         </ul>
         <p>The first two are completely free to use, while VoiceOver comes with Apple products. These tools are essential for testing out your site if you want to keep it accessible.</p>
         <p>It's recommended you actually test your site to see if it works well with screen readers. You'll learn a lot by using them.</p>
@@ -131,7 +131,7 @@
         <p>Naturally, it takes a lot of work if the video is long. However, anything that is relevant to the overall point of the page should have transcripts- even if you leave some things out, such as the stutters or irrelevant jokes.</p>
         <h2 id="image-size">Compressing images</h2>
         <p>If your page is image-heavy, it might be beneficial to compress them. In other words, lower their file size. This will help your website load faster, and it's especially helpful for those with a poor Internet connection.</p>
-        <p>There are programs that allow you to shave off the size of image files, such as <a href="https://pnggauntlet.com/" target="_blank">PNGGauntlet</a> (for Windows) or <a href="https://github.com/Huluti/Curtail" target="_blank">Curtail</a> (for Linux). There are also browser-based solutions, such as <a href="https://squoosh.app/" target="_blank">Squoosh</a> and <a href="https://ezgif.com/" target="_blank">EZGIF</a>. The latter allows users for multiple file types, including GIFs, so it’s especially recommended.</p>
+        <p>There are programs that allow you to shave off the size of image files, such as <a href="https://pnggauntlet.com/" target="_blank">PNGGauntlet</a> (for Windows) or <a href="https://github.com/Huluti/Curtail" target="_blank">Curtail</a> (for Linux). There are also browser-based solutions, such as <a href="https://squoosh.app/" target="_blank">Squoosh</a> and <a href="https://ezgif.com/" target="_blank">EZGIF</a>. The latter allows users for multiple file types, including GIFs, so it's especially recommended.</p>
         <footer>
             <p><a href="/">Index</a> | <a href="/writing.html">Writing</a></p>
             <img src="/images/computer.gif" alt="Decorative image">
