--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>The devils' den</title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <title>The devils' den</title>
     <style>
         body {
             color: #fff;
@@ -111,6 +111,7 @@
             display: inline-block;
             vertical-align: top;
             overflow: hidden;
+            text-align: center;
         }
 
         footer {
@@ -132,7 +133,7 @@
             <nav>
                 <h3>Personal</h3>
                 <ul>
-                    <li><a href="/about.html">About me</a></li>
+                    <li><a href="/about.html">About</a></li>
                     <li><a href="/fursonae.html">Fursonas</a></li>
                 </ul>
                 <h3>Works</h3>
@@ -165,7 +166,7 @@
             </section>
             <section id="video">
                 <h3>Video of the now</h3>
-                <iframe height="135px" src="https://www.youtube-nocookie.com/embed/qWgNGexFWIU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe height="135px" width="100%" src="https://www.youtube-nocookie.com/embed/qWgNGexFWIU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <h6><a href="/videoarchive.html">Video archive</a></h6>
             </section>
         </article>
