--- a/about.html
+++ b/about.html
@@ -72,6 +72,8 @@
             background-color: azure;
             border: 1px solid midnightblue;
             text-align: left;
+            height: 125px;
+            overflow: auto;
         }
         #statuscafe-username {
             margin-bottom: .5em;
@@ -114,10 +116,11 @@
               </aside>
         </section>
         <article>
-            <h2>Bruno A.</h2>
+            <h2>Who?</h2>
             <a href="https://picrew.me/ja/image_maker/1944831/" target="_blank"><img src="/images/picrew.png" alt="A Picrew avatar" title="That's me!" style="width: 200px; float: right;"></a>
             <p>Heya, hiya, how are ya? Name's devils (all lowercase) or Bruno if you'd prefer an actual name. I'm a 25 year-old guy from Portugal, they/them or he/him.</p>
             <p>I'm a bit of a recluse, I barely use social media nowadays. Other than hanging out at my silly websites, I spend a considerable amount of time <a href="/art.html">drawing</a>, playing video games and feeding <a href="https://virtu.pet/userlookup/?user=devils" target="_blank">my Neopets</a>. I also keep a <a href="https://dungbeetle.neocities.org/" target="_blank">virtual diary</a> because I cannot remember shit for long and keeping track of each day helps.</p>
+            <p>At any given time it's safe to assume I'm listening to either Halley Labs or Everything Everything songs.</p>
             <h2>An amalgamation</h2>
             <p>I'm pretty open about my <a href="https://morethanone.info/" target="_blank">plural</a> status. «I» is used in place of «we» throughout my sites to make things easier to understand.</p>
             <p>The ones running this place are <strong>Alastor</strong> and <strong>Angel</strong>, the ones who actually care enough to keep an online presence.</p>
@@ -127,13 +130,21 @@
                 <li>Each system works differently anyways.</li>
             </ol>
             <p>It probably won't come up in my sites much, so don't worry about it. I just wanted to make that clear since it's an important aspect of my life and it severely impacts the way I communicate with others.</p>
-            <p><a href="https://pluralcode.carrd.co/" target="_blank">Plural Code</a> BTW: PLC: TW, MN, AP, TG, GD, GY/AR/AC, CY</p>
         </article>
         <section id="stuff">
             <div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=heckmaster" defer></script>
             <h2>Say a thing!</h2>
             <iframe src="https://www5.cbox.ws/box/?boxid=943407&boxtag=o2Qbdo" width="98%" height="250" allowtransparency="yes" allow="autoplay" frameborder="0" marginheight="0" marginwidth="0" scrolling="auto"></iframe>
-            <img src="/images/handsyouthis.png" alt="Gives you Tattletail" title="It's dangerous to go alone, take this.">
+            <img src="/images/freebies/blinkies/god.gif" alt="On my way to kill God">
+            <img src="/images/buttons/cocksuckingfaggot.gif" alt="Cock sucking faggot">
+            <img src="/images/buttons/freespeech.gif" alt="Free speech forever!">
+            <img src="/images/buttons/htmldream.gif" alt="I dream in HTML">
+            <img src="/images/buttons/mikumustdie.gif" alt="Miku must die">
+            <img src="/images/freebies/buttons/halley-labs.png" alt="Halley Labs fan">
+            <img src="/images/freebies/buttons/jesus.png" alt="Jesus kissed men">
+            <img src="/images/freebies/badges/shapeshifter.gif" alt="Shapeshifter">
+            <img src="/images/nightcoder.png" alt="Night coder">
+            <img src="/images/freebies/blinkies/hazbin.gif" alt="Hazbin Hotel fan">
         </section>
     </main>
 </body>
