--- a/about.html
+++ b/about.html
@@ -72,8 +72,9 @@
             background-color: azure;
             border: 1px solid midnightblue;
             text-align: left;
-            height: 125px;
+            height: 80px;
             overflow: auto;
+            margin-bottom: 10px;
         }
         #statuscafe-username {
             margin-bottom: .5em;
@@ -82,6 +83,14 @@
         #statuscafe-content {
             margin: 0 1em 0.5em 1em;
         }
+
+        figure {
+            float: right;
+            text-align: center;
+            max-width: 200px;
+            margin: 0;
+        }
+
     </style>
 </head>
 <body>
@@ -110,17 +119,30 @@
                 <img src="/images/64disk.png" alt="64 Disk Drives">
                 <img src="/images/10thousand.png" alt="10 Thousand Fireflies">
                 <br>
-                <br>
-                <br>
-                <p><a href="/">Index</a></p>
               </aside>
         </section>
         <article>
             <h2>Who?</h2>
-            <a href="https://picrew.me/ja/image_maker/1944831/" target="_blank"><img src="/images/picrew.png" alt="A Picrew avatar" title="That's me!" style="width: 200px; float: right;"></a>
+            <figure>
+                <a href="https://picrew.me/ja/image_maker/1944831/" target="_blank"><img src="/images/picrew.png" alt="A Picrew avatar" title="That's me!" style="margin-bottom: 2px;"></a>
+                <figcaption>
+                    <a href="/freebies.html"><img src="/images/freebies/badges/shapeshifter.gif" alt="Shapeshifter"></a>
+                    <a href="https://web.badges.world/" target="_blank"><img src="/images/nightcoder.png" alt="Night coder"></a>
+                </figcaption>
+            </figure>
             <p>Heya, hiya, how are ya? Name's devils (all lowercase) or Bruno if you'd prefer an actual name. I'm a 25 year-old guy from Portugal, they/them or he/him.</p>
             <p>I'm a bit of a recluse, I barely use social media nowadays. Other than hanging out at my silly websites, I spend a considerable amount of time <a href="/art.html">drawing</a>, playing video games and feeding <a href="https://virtu.pet/userlookup/?user=devils" target="_blank">my Neopets</a>. I also keep a <a href="https://dungbeetle.neocities.org/" target="_blank">virtual diary</a> because I cannot remember shit for long and keeping track of each day helps.</p>
             <p>At any given time it's safe to assume I'm listening to either Halley Labs or Everything Everything songs.</p>
+            <h2>Why?</h2>
+            <img src="/images/magic.jpg" alt="4Chan post reading:
+            >«But Anon, magic isn't real»
+            >she says as she types onto a glowing enchanted piece of silicone
+            >which is sending messages to the heavens and then back down to earth
+            >to be scried by others doing the same thing">
+            <p>I've been utterly fascinated by the Internet since a very young age (you can read about it <a href="/theyearwas2007.html">here</a>).</p>
+            <p>I'm rather dissatisfied with the current state of the Web. I won't bother writing a huge «The Web is dying!» manifesto, and while I'm not inherently against social media as a whole, the way it's implemented honestly depresses me.</p>
+            <p>Most, if not all, social media steal your data, Tiktok makes teens' attention spans akin to a toddler's, and Twitter is Twitter. I'm tired of being fed shit that upsets me daily just so I interact with it, so I moved here.</p>
+            <p>However, this place is not a statement against the modern Web (not judging if yours is, it's just not my deal). I'm not running my sites as anything other than a place to dump my works and thoughts. I just like making silly websites, man...</p>
             <h2>An amalgamation</h2>
             <p>I'm pretty open about my <a href="https://morethanone.info/" target="_blank">plural</a> status. «I» is used in place of «we» throughout my sites to make things easier to understand.</p>
             <p>The ones running this place are <strong>Alastor</strong> and <strong>Angel</strong>, the ones who actually care enough to keep an online presence.</p>
@@ -133,18 +155,17 @@
         </article>
         <section id="stuff">
             <div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=heckmaster" defer></script>
-            <h2>Say a thing!</h2>
-            <iframe src="https://www5.cbox.ws/box/?boxid=943407&boxtag=o2Qbdo" width="98%" height="250" allowtransparency="yes" allow="autoplay" frameborder="0" marginheight="0" marginwidth="0" scrolling="auto"></iframe>
-            <img src="/images/freebies/blinkies/god.gif" alt="On my way to kill God">
             <img src="/images/buttons/cocksuckingfaggot.gif" alt="Cock sucking faggot">
             <img src="/images/buttons/freespeech.gif" alt="Free speech forever!">
             <img src="/images/buttons/htmldream.gif" alt="I dream in HTML">
-            <img src="/images/buttons/mikumustdie.gif" alt="Miku must die">
-            <img src="/images/freebies/buttons/halley-labs.png" alt="Halley Labs fan">
-            <img src="/images/freebies/buttons/jesus.png" alt="Jesus kissed men">
-            <img src="/images/freebies/badges/shapeshifter.gif" alt="Shapeshifter">
-            <img src="/images/nightcoder.png" alt="Night coder">
-            <img src="/images/freebies/blinkies/hazbin.gif" alt="Hazbin Hotel fan">
+            <a href="https://dokode.moe/graphics" target="_blank"><img src="/images/buttons/mikumustdie.gif" alt="Miku must die"></a>
+            <a href="/freebies.html"><img src="/images/freebies/buttons/halley-labs.png" alt="Halley Labs fan"></a>
+            <a href="/freebies.html"><img src="/images/freebies/buttons/jesus.png" alt="Jesus kissed men"></a>
+            <a href="https://cyber-rot.neocities.org/mine" target="_blank"><img src="/images/buttons/ao3.gif" alt="Proud AO3 freak"></a>
+            <a href="https://sightseer.neocities.org/graphics/" target="_blank"><img src="/images/buttons/art.png" alt="I support artistic freedom"></a>
+            <h4>It's dangerous to go alone... take this.</h4>
+            <img src="/images/handsyouthis.png" alt="A Tattletail plushie" style="width: 150px;">
+            <p><a href="/">Index</a></p>
         </section>
     </main>
 </body>
