--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
             background-color: #000;
             border: 4px double #fff;
             width: 600px;
-            height: 700px;
             margin: 25px auto;
         }
 
@@ -45,7 +44,7 @@
 
         aside {
             width: 190px;
-            height: 500px;
+            height: 540px;
             padding: 10px;
             overflow: hidden;
             display: inline-block;
@@ -83,7 +82,7 @@
         }
 
         article {
-            height: 500px;
+            height: 540px;
             width: 355px;
             padding: 10px;
             overflow: hidden;
@@ -91,8 +90,8 @@
             vertical-align: top;
         }
 
-        section h3 {
-            padding-bottom: 5px;
+        h2, h3 {
+            margin-bottom: 2px;
         }
 
         #button {
@@ -117,7 +116,6 @@
         footer {
             border-top: 1px solid #fff;
             text-align: center;
-            height: 210px;
             max-width: 100%;
             margin-top: -5px;
         }
