--- a/index.html
+++ b/index.html
@@ -148,7 +148,9 @@
             </nav>
             <img src="/images/publicbath.jpg" alt="Decorative image" style="border: 1px solid #ffd4e3;">
             <h2><span style="text-transform: uppercase;">BayaNet</span>!</h2>
-            <a href="https://croful.neocities.org/bayanet" target="_blank"><img src="https://croful.neocities.org/assets/bayanet/devils.png" alt="BayaNet member ID"></a>
+            <a href="https://croful.neocities.org/bayanet" target="_blank"><img src="https://croful.neocities.org/assets/bayanet/devils.png" alt="BayaNet member ID" style="margin-bottom: 5px;"></a>
+            <a href="https://archive.org/" target="_blank"><img src="/images/buttons/archive.gif" alt="Internet Archive"></a>
+            <a href="https://en.wikipedia.org/" target="_blank"><img src="/images/buttons/supportwiki.gif" alt="Support Wikipedia"></a>
         </aside>
         <article>
             <h2>What's the story, purgatory?</h2>
@@ -167,6 +169,7 @@
                 <iframe height="135px" width="100%" src="https://www.youtube-nocookie.com/embed/qWgNGexFWIU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <h6><a href="/videoarchive.html">Video archive</a></h6>
             </section>
+            <a href="https://web.archive.org/web/20001025155534/http://www.amy.hi-ho.ne.jp/~mono93/cat/english/sozai_e.html" target="_blank"><img src="/images/neko.gif" alt="Decorative image" style="float: right;"></a>
         </article>
         <footer>
             <p>yourdevilfriends.art © <a href="mailto:heckmaster@protonmail.com">Bruno «devils» A.</a><br>
@@ -175,7 +178,7 @@
                 <img src="/images/buttons/badhair.png" alt="There are no bad hair days on the Internet">
                 <img src="/images/buttons/coffee.gif" alt="Fueled by coffee">
                 <img src="/images/buttons/gothere.gif" alt="Go to hell now!">
-                <img src="/images/buttons/linux.gif" alt="Linux now!">
+                <a href="https://endeavouros.com/" target="_blank"><img src="/images/buttons/linux.gif" alt="Linux now!"></a>
                 <img src="/images/buttons/ihatetheimperialsystem.gif" alt="I hate the imperial system">
                 <img src="/images/buttons/piracy.gif" alt="Piracy now!">
                 <br>
