Freebies page, minor fixes

--- a/accessibility.html
+++ b/accessibility.html
@@ -134,7 +134,7 @@
         <p>There are programs that allow you to shave off the size of image files, such as <a href="https://pnggauntlet.com/" target="_blank">PNGGauntlet</a> (for Windows) or <a href="https://github.com/Huluti/Curtail" target="_blank">Curtail</a> (for Linux). There are also browser-based solutions, such as <a href="https://squoosh.app/" target="_blank">Squoosh</a> and <a href="https://ezgif.com/" target="_blank">EZGIF</a>. The latter allows users for multiple file types, including GIFs, so it's especially recommended.</p>
         <footer>
             <p><a href="/">Index</a> | <a href="/writing.html">Writing</a></p>
-            <img src="/images/computer.gif" alt="Decorative image">
+            <img src="/images/computer.gif">
         </footer>
     </main>
 </body>
