--- a/art.html
+++ b/art.html
@@ -16,7 +16,7 @@
         <a href="#2023"><button>2023</button></a>
         <a href="#2022"><button>2022</button></a>
         <a href="#2021"><button>2021</button></a>
-        <img src="/images/despair.jpg" alt="Decorative image">
+        <img src="/images/despair.jpg">
     </nav>
     <main>
         <!--2023-->
