--- a/theyearwas2007.html
+++ b/theyearwas2007.html
@@ -20,7 +20,7 @@
         <p>At the ripe old age of 21, I taught myself basic HTML and CSS, and the rest is history.</p>
         <footer>
             <p><a href="/">Index</a> | <a href="/writing.html">Writing</a></p>
-            <img src="/images/computer.gif" alt="Decorative image">
+            <img src="/images/computer.gif">
         </footer>
     </main>
 </body>
