--- a/writing.html
+++ b/writing.html
@@ -39,7 +39,7 @@
 </head>
 <body>
     <header>
-        <img src="/images/openeyed.gif" alt="Header image">
+        <img src="/images/openeyed.gif">
     </header>
     <main>
         <h2>Writings (hopefully coherent)</h2>
