--- a/index.html
+++ b/index.html
@@ -146,11 +146,9 @@
                     <li><a href="/images/desktop.png">desktop.png</a></li>
                 </ul>
             </nav>
-            <img src="/images/publicbath.jpg" alt="Decorative image" style="border: 1px solid #ffd4e3;">
+            <img src="/images/publicbath.jpg" style="border: 1px solid #ffd4e3;">
             <h2><span style="text-transform: uppercase;">BayaNet</span>!</h2>
             <a href="https://croful.neocities.org/bayanet" target="_blank"><img src="https://croful.neocities.org/assets/bayanet/devils.png" alt="BayaNet member ID" style="margin-bottom: 5px;"></a>
-            <a href="https://archive.org/" target="_blank"><img src="/images/buttons/archive.gif" alt="Internet Archive"></a>
-            <a href="https://en.wikipedia.org/" target="_blank"><img src="/images/buttons/supportwiki.gif" alt="Support Wikipedia"></a>
         </aside>
         <article>
             <h2>What's the story, purgatory?</h2>
@@ -169,22 +167,24 @@
                 <iframe height="135px" width="100%" src="https://www.youtube-nocookie.com/embed/qWgNGexFWIU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <h6><a href="/videoarchive.html">Video archive</a></h6>
             </section>
-            <a href="https://web.archive.org/web/20001025155534/http://www.amy.hi-ho.ne.jp/~mono93/cat/english/sozai_e.html" target="_blank"><img src="/images/neko.gif" alt="Decorative image" style="float: right;"></a>
+            <a href="https://web.archive.org/web/20001025155534/http://www.amy.hi-ho.ne.jp/~mono93/cat/english/sozai_e.html" target="_blank"><img src="/images/neko.gif" style="float: right;"></a>
+            <h6>Graphics link to source if I know it</h6>
+            <a href="http://www.mabsland.com/Adoption.html" target="_blank"><img src="/images/buttons/censor.gif" alt="Website rated MA" title="This website is not for the faint of heart, the overly judgemental and tiny baby children "></a>
         </article>
         <footer>
             <p>yourdevilfriends.art © <a href="mailto:heckmaster@protonmail.com">Bruno «devils» A.</a><br>
                 2023-whenever</p>
-                <p><a rel="me" href="https://blorbo.social/@yourdevilfriends">Mastodon</a> · <a href="https://yourdevilfriends.tumblr.com/">Tumblr</a></p>
-                <img src="/images/buttons/badhair.png" alt="There are no bad hair days on the Internet">
+                <p><a rel="me" href="https://blorbo.social/@yourdevilfriends" target="_blank">Mastodon</a> · <a href="https://yourdevilfriends.tumblr.com/" target="_blank">Tumblr</a></p>
+                <a href="https://www.deviantart.com/kouenli/art/No-Bad-Hair-Days-On-The-Internet-682431234" target="_blank"><img src="/images/buttons/badhair.png" alt="There are no bad hair days on the Internet"></a>
                 <img src="/images/buttons/coffee.gif" alt="Fueled by coffee">
                 <img src="/images/buttons/gothere.gif" alt="Go to hell now!">
-                <a href="https://endeavouros.com/" target="_blank"><img src="/images/buttons/linux.gif" alt="Linux now!"></a>
-                <img src="/images/buttons/ihatetheimperialsystem.gif" alt="I hate the imperial system">
+                <img src="/images/buttons/linux.gif" alt="Linux now!">
+                <a href="https://ihatetheimperialsystem.neocities.org" target="_blank"><img src="/images/buttons/ihatetheimperialsystem.gif" alt="I hate the imperial system"></a>
                 <img src="/images/buttons/piracy.gif" alt="Piracy now!">
                 <br>
-                <img src="/images/strawbs.gif" alt="Decorative image">
+                <img src="/images/strawbs.gif">
                 <img src="/images/buttons/powered.gif" alt="Powered by pure evil">
-                <img src="/images/strawbs.gif" alt="Decorative image">
+                <img src="/images/strawbs.gif">
         </footer>
     </main>
 </body>
