--- a/videoarchive.html
+++ b/videoarchive.html
@@ -47,7 +47,7 @@
 </head>
 <body>
     <main>
-        <h1><img src="/images/maromi.gif" alt="Decorative image">Video archive<img src="/images/maromi.gif" alt="Decorative image"></h1>
+        <h1><img src="/images/maromi.gif">Video archive<img src="/images/maromi.gif"></h1>
         <h2><a href="/">Index</a></h2>
         <article>
             <h2>May 5th, 2023-current</h2>
