Fursona page, new links + video + art

--- a/about.html
+++ b/about.html
@@ -132,7 +132,7 @@
             </figure>
             <p>Heya, hiya, how are ya? Name's devils (all lowercase) or Bruno if you'd prefer an actual name. I'm a 25 year-old guy from Portugal, they/them or he/him.</p>
             <p>I'm a bit of a recluse, I barely use social media nowadays. Other than hanging out at my silly websites, I spend a considerable amount of time <a href="/art.html">drawing</a>, playing video games and feeding <a href="https://virtu.pet/userlookup/?user=devils" target="_blank">my Neopets</a>. I also keep a <a href="https://dungbeetle.neocities.org/" target="_blank">virtual diary</a> because I cannot remember shit for long and keeping track of each day helps.</p>
-            <p>At any given time it's safe to assume I'm listening to either Halley Labs or Everything Everything songs.</p>
+            <p>At any given time it's safe to assume I'm listening to either Halley Labs/Lapfox Trax or Everything Everything songs.</p>
             <h2>Why?</h2>
             <img src="/images/magic.jpg" alt="4Chan post reading:
             >«But Anon, magic isn't real»
