--- a/art.html
+++ b/art.html
@@ -21,6 +21,7 @@
     <main>
         <!--2023-->
         <h2 id="2023">2023</h2>
+        <a href="https://images2.imgbox.com/0f/a2/LVpxdsjF_o.png"><img src="https://images2.imgbox.com/0f/a2/LVpxdsjF_o.png" alt="A brown anthropomorphic tapeworm."></a>
         <a href="https://images2.imgbox.com/a4/c8/TbsivZ69_o.png"><img src="https://images2.imgbox.com/a4/c8/TbsivZ69_o.png" alt="Angel Dust holding Alastor while he's sleeping while they both lay in bed, Angel is also taking a selfie with their phone"></a>
         <a href="https://images2.imgbox.com/8f/a5/5qzPedfq_o.png"><img src="https://images2.imgbox.com/8f/a5/5qzPedfq_o.png" alt="CW: suggestive" alt="Angel Dust and Alastor being intimate while half-naked with text reading «I could fuck him into a bigger smile» over them"></a>
         <a href="https://images2.imgbox.com/46/b2/P60fgpwu_o.png"><img src="https://images2.imgbox.com/46/b2/P60fgpwu_o.png" alt="Alastor and Angel Dust as desktop buddies"></a>
