--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <h3>Personal</h3>
                 <ul>
                     <li><a href="/about.html">About</a></li>
-                    <li><a href="/fursonae.html">Fursonas</a></li>
+                    <li><a href="/fursona.html">Fursona</a></li>
                 </ul>
                 <h3>Works</h3>
                 <ul>
@@ -164,7 +164,7 @@
             </section>
             <section id="video">
                 <h3>Video of the now</h3>
-                <iframe height="135px" width="100%" src="https://www.youtube-nocookie.com/embed/podqkj5k5O4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="100%" height="135px" src="https://www.youtube-nocookie.com/embed/_QDuRU9b9Yw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <h6><a href="/videoarchive.html">Video archive</a></h6>
             </section>
             <a href="https://web.archive.org/web/20001025155534/http://www.amy.hi-ho.ne.jp/~mono93/cat/english/sozai_e.html" target="_blank"><img src="/images/neko.gif" style="float: right;"></a>
