--- a/linkroll.html
+++ b/linkroll.html
@@ -80,6 +80,10 @@
         ul {
             list-style-type: '> ';
         }
+
+        .new {
+            list-style-image: url(/images/new.gif);
+        }
     </style>
 </head>
 <body>
@@ -119,13 +123,17 @@
             <header><h2>Neat sites</h2></header>
             <div>
                 <ul>
+                    <li class="new"><a href="https://yokai.com/" target="_blank">Yokai.com</a>; A database of Japanese folklore.</li>
+                    <li class="new"><a href="" target="_blank">ProtonDB</a>; Linux/Steam Deck compatability reports. Always check before buying a Steam game if you're a Linux user!</li>
+                    <li class="new"><a href="https://vimm.net" target="_blank">Vimm's Lair</a>; Long-running ROM provider with a focus on older titles. ★</li>
+                    <li class="new"><a href="https://wiki.telefang.net/Wikifang" target="_blank">Wikifang</a>; Indie wiki dedicated to the lesser-known Smilesoft chain of monster-taming RPGs- includes translation patches.</li>
                     <li><a href="https://www.youtube.com/@danooct1" target="_blank">danooct1</a> (Youtube); Super niche Youtube channel about old malware, usually viruses. ★</li>
                     <li><a href="https://gamera.neocities.org/" target="_blank">Gamera</a>; A personal website with a large focus on video games.</li>
                     <li><a href="https://www.cicadamania.com/" target="_blank">Cicada Mania</a>; A website dedicated to one of God's only perfect creations... the cicadas!</li>
                     <li><a href="https://ynoproject.net" target="_blank">Yume Nikki Online Project</a>; Play Yume Nikki (or some of its fangames) in your browser... <em>and</em> with other people!</li>
                     <li><a href="https://postbox.garden/index.html" target="_blank">Postbox Garden</a>; An imageboard where all posts are mailed to the Webmaster, who will then scan and upload them.</li>
                     <li><a href="https://pluralrespect.neocities.org" target="_blank">Plural Respect</a>; One of the few «this is how you should treat systems» sites that I actually agree with. ★</li>
-                    <li><a href="https://bluemaxima.org/flashpoint/" target="_blank">BlueMaxima's Flashpoint</a>; Gigantic archive of Flash-made content. Kind of confusing to get to work on Linux, but worth it. ★</li>
+                    <li><a href="https://bluemaxima.org/flashpoint/" target="_blank">BlueMaxima's Flashpoint</a>; Gigantic archive of Flash-made content. ★</li>
                     <li><a href="https://silverhe.art" target="_blank">Silver's Garden of Dreams</a>; Super cozy personal website. The Webmaster's pretty cool too.</li>
                 </ul>
             </div>
@@ -134,6 +142,7 @@
             <header><h2>The odd ones</h2></header>
             <div>
                 <ul>
+                    <li class="new"><a href="https://www.youtube.com/@parthenocarpySA" target="_blank">parthenocarpySA</a> (Youtube); AKA Cooking With Hoarders. Home of the most chaotic cooking show imaginable. ★</li>
                     <li><a href="https://www.youtube.com/@DeadwingDork" target="_blank">DeadwingDork</a> (Youtube); Guy on Youtube that talks about Internet weirdos. ★</li>
                     <li><a href="http://www.demon-sushi.com/warning/" target="_blank">Documentation of the FF7 House</a> (18+); A bunch of early 2000s documents related to what can only be described as a soulbonding cult.</li>
                     <li><a href="https://www.sonic-online.com/sonicpassion/" target="_blank">Sonic Passion: A case study on idiots</a> (18+); A long article(?) about Sonic Passion, an early 2000s forum dedicated to Sonic self-shippers. Pretty mean-spirited. ★</li>
