--- a/linkroll.html
+++ b/linkroll.html
@@ -59,7 +59,6 @@
         }
 
         aside div {
-            max-height: 400px;
             max-width: 100%;
             padding: 20px;
             overflow: auto;
@@ -96,6 +95,8 @@
         <aside>
             <header><h2>Button wall</h2></header>
             <div>
+                <a href="https://artwork.neocities.org" target="_blank"><img src="/images/buttons/artwork.gif" alt="artwork.neocities.org" title="Amazing pixel art and huge graphic collections!"></a>
+                <a href="https://www.bikobatanari.art" target="_blank"><img src="/images/buttons/bikobatanari.gif" alt="bikobatanari.art" title="A neat personal/art website with interesting articles about being an artist online."></a>
                 <a href="https://bluemoonfalls.com/" target="_blank"><img src="/images/buttons/bluemoonfalls.png" alt="Blue Moon Falls" title="Pokémon fansite based on the mainline GBC titles. ★"></a>
                 <a href="https://bugsite.org" target="_blank"><img src="/images/buttons/bugsite.png" alt="Bugsite" title="Fansite for an obscure monster-taming RPG."></a>
                 <a href="https://cadnomori.neocities.org/" target="_blank"><img src="/images/buttons/cadnomori.png" alt="Cadnomori" title="Pretty sure this is the first personal website I ever visited. It's very charming."></a>
@@ -107,9 +108,11 @@
                 <a href="https://lazybones.neocities.org/" target="_blank"><img src="/images/buttons/lazybones.gif" alt="Lazybones" title="Yeah, I'm pretty sure this is the coziest website ever created."></a>
                 <a href="https://lu.tiny-universes.net" target="_blank"><img src="/images/buttons/lu.gif" alt="Lulu in Cyberspace" title="One of my main inspirations when I was starting out. It contains an acceptable amount of cats. ★"></a>
                 <a href="https://mappapapa.neocities.org/" target="_blank"><img src="/images/buttons/mappapapa.png" alt="SpillingDown" title="Wonderful art that kind of got me into MobRei. Cute pet pages too."></a>
+                <a href="https://forum.melonland.net/index.php" target="_blank"><img src="/images/buttons/melonlandforum.gif" alt="MelonLand Forum" title="Super chill forum. Mostly based around the Web revival movement. ★"></a>
                 <a href="https://pixelglade.net/" target="_blank"><img src="/images/buttons/pixelglade.gif" alt="PixelGlade" title="Lovely page and lovely art. I used the Webmaster's dithering brushes too."></a>
                 <a href="https://rgbteahouse.neocities.org/" target="_blank"><img src="/images/buttons/rgbteahouse.jpg" alt="RGB Teahouse" title="One of my favorite visual artists online."></a>
                 <a href="https://ribo.zone/" target="_blank"><img src="/images/buttons/ribose.gif" alt="Ribose" title="A fellow bug fan with a perfectly dithered website. ★"></a>
+                <a href="https://elucidatedvoyyd.neocities.org/rp-home" target="_blank"><img src="/images/buttons/robopon.gif" alt="The Robopon Iceberg" title="A fansite for the Robopon, an RPG parodying Pokémon."></a>
                 <a href="https://spiders.neocities.org" target="_blank"><img src="/images/buttons/spiders.gif" alt="NewsMan's house!" title="Very fun to explore... and very red as well. Cool art as well."></a>
                 <a href="https://sugarblush.neocities.org" target="_blank"><img src="/images/buttons/sugarblush.png" alt="SugarBlush" title="A very cute site. I've had the pleasure to speak to its Webmaster and she's just as sweet as you'd expect!"></a>
                 <a href="https://thegameboyabyss.neocities.org" target="_blank"><img src="/images/buttons/thegameboyabyss.png" alt="The Game Boy Abyss" title="A review blog for GBA titles. Expect shovelware! ★"></a>
@@ -123,10 +126,14 @@
             <header><h2>Neat sites</h2></header>
             <div>
                 <ul>
-                    <li class="new"><a href="https://yokai.com/" target="_blank">Yokai.com</a>; A database of Japanese folklore.</li>
-                    <li class="new"><a href="" target="_blank">ProtonDB</a>; Linux/Steam Deck compatability reports. Always check before buying a Steam game if you're a Linux user!</li>
-                    <li class="new"><a href="https://vimm.net" target="_blank">Vimm's Lair</a>; Long-running ROM provider with a focus on older titles. ★</li>
-                    <li class="new"><a href="https://wiki.telefang.net/Wikifang" target="_blank">Wikifang</a>; Indie wiki dedicated to the lesser-known Smilesoft chain of monster-taming RPGs- includes translation patches.</li>
+                    <li class="new"><a href="https://tcrf.net/The_Cutting_Room_Floor" target="_blank">The Cutting Room Floor</a>; An indie wiki about cut and unused content from video games. ★</li>
+                    <li class="new"><a href="https://chartcarr.neocities.org" target="_blank">chart's translations</a>; English translations of various gaming-related articles.</li>
+                    <li class="new"><a href="https://virtu.pet" target="_blank">Virtu.pet</a>; My preferred way to play Neopets! An amazing recreation of the OG experience. ★</li>
+                    <li class="new"><a href="https://junelalonde.bandcamp.com/" target="_blank">June Lalonde</a> (Bandcamp); A furry musician. I've been listening to her tunes for over a decade!</li>
+                    <li><a href="https://yokai.com/" target="_blank">Yokai.com</a>; A database of Japanese folklore.</li>
+                    <li><a href="https://www.protondb.com/" target="_blank">ProtonDB</a>; Linux/Steam Deck compatability reports. Always check before buying a Steam game if you're a Linux user!</li>
+                    <li><a href="https://vimm.net" target="_blank">Vimm's Lair</a>; Long-running ROM provider with a focus on older titles. ★</li>
+                    <li><a href="https://wiki.telefang.net/Wikifang" target="_blank">Wikifang</a>; Indie wiki dedicated to the lesser-known Smilesoft chain of monster-taming RPGs- includes translation patches.</li>
                     <li><a href="https://www.youtube.com/@danooct1" target="_blank">danooct1</a> (Youtube); Super niche Youtube channel about old malware, usually viruses. ★</li>
                     <li><a href="https://gamera.neocities.org/" target="_blank">Gamera</a>; A personal website with a large focus on video games.</li>
                     <li><a href="https://www.cicadamania.com/" target="_blank">Cicada Mania</a>; A website dedicated to one of God's only perfect creations... the cicadas!</li>
@@ -142,7 +149,7 @@
             <header><h2>The odd ones</h2></header>
             <div>
                 <ul>
-                    <li class="new"><a href="https://www.youtube.com/@parthenocarpySA" target="_blank">parthenocarpySA</a> (Youtube); AKA Cooking With Hoarders. Home of the most chaotic cooking show imaginable. ★</li>
+                    <li><a href="https://www.youtube.com/@parthenocarpySA" target="_blank">parthenocarpySA</a> (Youtube); AKA Cooking With Hoarders. Home of the most chaotic cooking show imaginable. ★</li>
                     <li><a href="https://www.youtube.com/@DeadwingDork" target="_blank">DeadwingDork</a> (Youtube); Guy on Youtube that talks about Internet weirdos. ★</li>
                     <li><a href="http://www.demon-sushi.com/warning/" target="_blank">Documentation of the FF7 House</a> (18+); A bunch of early 2000s documents related to what can only be described as a soulbonding cult.</li>
                     <li><a href="https://www.sonic-online.com/sonicpassion/" target="_blank">Sonic Passion: A case study on idiots</a> (18+); A long article(?) about Sonic Passion, an early 2000s forum dedicated to Sonic self-shippers. Pretty mean-spirited. ★</li>
