New article + minor changes

--- a/about.html
+++ b/about.html
@@ -109,16 +109,13 @@
                 </small>
               </div>
               <aside>
+                <a href="mailto:heckmaster@protonmail.com"><img src="/images/email.gif" alt="Send me an e-mail!"></a>
+                <a href="https://forum.melonland.net/index.php?action=profile;u=641" target="_blank"><img src="/images/mlfmember.gif" alt="My MelonLand Forum profile"></a>
                 <h2>Cool people</h2>
                 <a href="https://mortalsins.neocities.org/" target="_blank"><img src="/images/buttons/mortalsins.png" alt="MortalSins" title="Patrick ♥"></a>
                 <a href="https://croful.neocities.org" target="_blank"><img src="/images/buttons/croful.png" alt="Croful" title="Cro"></a>
                 <a href="https://dokode.moe" target="_blank"><img src="/images/buttons/dokodemo.gif" alt="DokoDemo" title="Suni"></a>
                 <a href="https://feelingmachine.moe" target="_blank"><img src="/images/buttons/feelingmachine.gif" alt="FeelingMachine" title="Nephro"></a>
-                <a href="https://croful.neocities.org/badge" target="_blank"><h2>Badges</h2></a>
-                <img src="/images/404.png" alt="How did we get here...?">
-                <img src="/images/64disk.png" alt="64 Disk Drives">
-                <img src="/images/10thousand.png" alt="10 Thousand Fireflies">
-                <br>
               </aside>
         </section>
         <article>
@@ -130,7 +127,7 @@
                     <a href="https://web.badges.world/" target="_blank"><img src="/images/nightcoder.png" alt="Night coder"></a>
                 </figcaption>
             </figure>
-            <p>Heya, hiya, how are ya? Name's devils (all lowercase) or Bruno if you'd prefer an actual name. I'm a 25 year-old guy from Portugal, they/them or he/him.</p>
+            <p>Heya, hiya, how are ya? Name's devils (all lowercase) or Bruno if you'd prefer an actual name. I'm a 25 year-old guything from Portugal, they/them or he/him.</p>
             <p>I'm a bit of a recluse, I barely use social media nowadays. Other than hanging out at my silly websites, I spend a considerable amount of time <a href="/art.html">drawing</a>, playing video games and feeding <a href="https://virtu.pet/userlookup/?user=devils" target="_blank">my Neopets</a>. I also keep a <a href="https://dungbeetle.neocities.org/" target="_blank">virtual diary</a> because I cannot remember shit for long and keeping track of each day helps.</p>
             <p>At any given time it's safe to assume I'm listening to either Halley Labs/Lapfox Trax or Everything Everything songs.</p>
             <h2>Why?</h2>
