--- a/writing.html
+++ b/writing.html
@@ -44,6 +44,7 @@
     <main>
         <h2>Writings (hopefully coherent)</h2>
         <ul>
+            <li><a href="/ai.html">AI, friend or foe?</a>; Thoughts on AI and its use. Featuring Trip and Grace from <em>Façade</em>. Written on 16/05/2023.</li>
             <li><a href="/theyearwas2007.html">The year was 2007...</a>; My Webmaster origin story, if you will. Short, but hopefully sweet. Written on 04/05/2023.</li>
             <li><a href="/accessibility.html">Pointers for Web accessibility</a>; A guide filled with explanations about Web accessibility concerns, as well as some proposed solutions. Last updated on 04/05/2023.</li>
         </ul>
