--- a/index.html
+++ b/index.html
@@ -149,6 +149,9 @@
             <img src="/images/publicbath.jpg" style="border: 1px solid #ffd4e3;">
             <h2><span style="text-transform: uppercase;">BayaNet</span>!</h2>
             <a href="https://croful.neocities.org/bayanet" target="_blank"><img src="https://croful.neocities.org/assets/bayanet/devils.png" alt="BayaNet member ID" style="margin-bottom: 5px;"></a>
+            <img src="/images/404.png" alt="How did we get here...?">
+            <img src="/images/64disk.png" alt="64 Disk Drives">
+            <img src="/images/10thousand.png" alt="10 Thousand Fireflies">
         </aside>
         <article>
             <h2>What's the story, purgatory?</h2>
