--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://transmascring.netlify.app/tmring.css">
     <title>The devils' den</title>
     <style>
         body {
@@ -175,6 +176,16 @@
             <a href="http://www.mabsland.com/Adoption.html" target="_blank"><img src="/images/buttons/censor.gif" alt="Website rated MA" title="This website is not for the faint of heart, the overly judgemental and tiny baby children "></a>
         </article>
         <footer>
+            <center>
+                <!-- Transmasc Ring -->
+                <div id="tmring" style="margin-top: 25px; width: 280px;">
+                    <div id="tmri">
+                    <img src="https://transmascring.netlify.app/tiny.png"><br>
+                    <p>Transmasculine Pride Webring</p>
+                    <a href="https://transmascring.netlify.app/devils/previous" target="_blank"><< prev</a> | <a href="https://transmascring.netlify.app" target="_blank">index</a> | <a href="https://transmascring.netlify.app/devils/next" target="_blank">next >> </a>
+                    </div> 
+                </div>
+            </center>
             <p>yourdevilfriends.art © <a href="mailto:heckmaster@protonmail.com">Bruno «devils» A.</a><br>
                 2023-whenever</p>
                 <p><a rel="me" href="https://blorbo.social/@yourdevilfriends" target="_blank">Mastodon</a> · <a href="https://yourdevilfriends.tumblr.com/" target="_blank">Tumblr</a></p>
